sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:14: error: Boolean does not take parameters
        swap(i,i+ecart);
            ^